--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
